# Stingray-Reader

./: .gitignore  LICENSE  Makefile  README.rst  build.py  package.sh  pyproject.toml  requirements.txt  setup.py  tox.ini  tox.toml  upload.sh
demo/: app.py  cobol_reader.py  conversion.py  profile.py  test.py  test_app.py  test_cobol_reader.py  test_conversion.py  test_demo.py  test_profile.py
docs/: index.html
docs/html/: .buildinfo  (+26 more)
sample/: .gitignore  Anscombe_quartet_data.csv  Anscombe_quartet_data.ndjson  Anscombe_schema.csv  EPSPDATA.cpy  anscombe.cpy  anscombe.data  csv_workbook.csv  excel97_workbook.xls  excel_workbook.xlsx  numbers_workbook_09.numbers  numbers_workbook_13.numbers  ooo_workbook.ods  profile.rst  simple.csv  tab_workbook.tab  workbook.simple  zipcty.cob  zipcty1  zipcty2
source/: build.rst  cell.rst  cobol.rst  cobol_defs.rst  cobol_init.rst  cobol_loader.rst  conf.py  developer.rst  history.rst  installation.rst  iwork13.rst  package.rst  protobuf.rst  schema.rst  schema_loader.rst  sheet.rst  snappy.rst  stingray_init.rst  workbook.rst
stingray/: __init__.py  cell.py  cobol_parser.py  estruct.py  implementations.py  protobuf.py  schema_instance.py  sheet.py  snappy.py  workbook.py
stingray.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py  cell.py  cobol.py  cobol_2.py  cobol_loader.py  main.py  schema.py  schema_loader.py  sheet.py  snappy_protobuf.py  workbook.py
tests/: test_cobol_parser.py  test_estruct.py  test_implementations.py  test_schema_instance.py  test_workbook.py
v4.5/: build.py
(+162 files in other folders)
